# BloomAI

./: README.md  requirements.txt
Backend/: .env  db.sqlite3  manage.py  pyproject.toml  requirements.txt
Backend/active-recall-system/: README.md  pyproject.toml  test_imports.py
Backend/active-recall-system/active_recall_system/: main.py
Backend/active-recall-system/active_recall_system/agents/: g_agent.py
Backend/active-recall-system/active_recall_system/models/: question_item.py
Backend/active-recall-system/active_recall_system/tools/: content_extractor.py
Backend/active-recall-system/data/questions/: 0559ce09-7b65-4135-b4dd-4fd2318ba1bb.json  14fdf91c-f8c5-4aae-91bb-2dd492b150d0.json  24decd66-40e2-4627-89b6-0980bdc98733.json  2695a964-2eab-4df9-b56a-18fd22e90ddb.json  3abda3a8-7120-43fe-8fe6-c0034f0a4447.json  4f966115-433e-4669-aeaf-4dbb3ee69ccc.json  5d454bae-2429-45bd-84c4-7c1118d9b5f4.json  67a377d2-2ea6-440e-ab37-7ca99eef78ca.json  6eec3ac6-9614-4363-8238-557c53b5fd7e.json  6f93e1ef-6688-4b1e-b93b-28bccffa2cf7.json  7c32e2d3-af79-43e0-9337-483514eae2cd.json  7fcf6ecc-aca7-4162-b33b-3718f0584bb4.json  9ac960dd-815a-4296-905d-04e2df7dcd4b.json  a9b31b29-2bc9-4531-b957-b3b426df643c.json  b0002ded-f697-488b-aab4-9b56fed9501b.json  b4ef1bf1-79ec-4da8-82d2-4302085ee0b0.json  c2d2ba02-76c6-4ccd-9f45-402354f7486a.json  (+3 more)
Backend/main_system/: models.py  views.py
Backend/main_system/migrations/: 0001_initial.py
Backend/main_system/services/: recall_service.py
Backend/recall_system/: asgi.py  settings.py  urls.py  wsgi.py
Backend/src/backend/: main.py
(+23 files in other folders)
